# datos-escala-humana

./: .flake8  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .nojekyll  .panache.toml  .pre-commit-config.yaml  01-python-geoespacial.html  01-python-geoespacial.qmd  02-riesgo-climatico.html  03-datos-abiertos.html  04-datos-accion.html  CHANGELOG.md  CLAUDE.md  DECISIONS.md  LICENSE  LICENSE-MIT  README.html  README.md  TODO.md  _quarto-en.yml  _quarto-es.yml  _quarto.yml  conclusion.html  conclusion.qmd  custom.scss  index.html  index.qmd  intro.html  intro.qmd  main.py  pyproject.toml  python_geoespacial.qmd  references.bib  references.html  riesgo_climatico.qmd  robots.txt  search.json  sitemap.xml
.agents/: climate-risk-expert.md  content-reviewer.md  eng-copyeditor.md  es-to-eng-translator.md  open-data-reviewer.md  pygis-instructor.md  quarto-formatter.md  rdm-expert.md
.claude/agents/: climate-risk-expert.md  content-reviewer.md  eng-copyeditor.md  es-to-eng-translator.md  open-data-reviewer.md  pygis-instructor.md  quarto-formatter.md  rdm-expert.md
.claude/hooks/: session-start.sh
.github/workflows/: check-data-urls.yml  ci.yml  main.yaml  quarto-publish.yml  release.yml
_book/: index.html  intro.html  references.html  summary.html
cookbooks/: esperanza.html  esperanza.ipynb  esperanza.qmd  esperanza.quarto_ipynb  la-plata.html  la-plata.qmd  pergamino.html  pergamino.qmd  villa-del-rosario.html  villa-del-rosario.qmd
datos-abiertos/: datos-abiertos.html
datos-accion/: datos-accion.html
docs/: 01-python-geoespacial.html  02-riesgo-climatico.html  03-datos-abiertos.html  04-datos-accion.html  conclusion.html  datos_abiertos.html  datos_accion.html  index.html  intro.html  python_geoespacial.html  references.html  riesgo_climatico.html  search.json  sitemap.xml
docs/cookbooks/: esperanza.html  la-plata.html  pergamino.html  villa-del-rosario.html
docs/datos-abiertos/: datos-abiertos.html
docs/datos-accion/: datos-accion.html
docs/en/: index.html  search.json  sitemap.xml
docs/es/: index.html  sitemap.xml
docs/python-geoespacial/: analisis-espacial.html  fundamentos.html  raster.html  unidad_1b_soluciones.html  vector.html
docs/riesgo-climatico/: exposicion.html  peligro.html  (+3 more)
en/: conclusion.qmd  intro.html  intro.qmd  robots.txt  styles.css
es/: conclusion.qmd  index.qmd  intro.qmd  search.json
project/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ROADMAP.md
python-geoespacial/: analisis-espacial.html  fundamentos.html  python-geoespacial.html  raster.html  raster.qmd  unidad_1b_soluciones.html  vector.html  vector.qmd
riesgo-climatico/: exposicion.html  exposicion.qmd  fundamentos.html  peligro.html  peligro.qmd  riesgo-climatico.html  riesgo.html  riesgo.qmd  vulnerabilidad.html  vulnerabilidad.qmd
tools/: qmd_ruff.py
(+97 files in other folders)
