[project]
name = "datos-escala-humana"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.57",
    "contextily>=1.6.2",
    "dask[distributed]>=2025.7.0",
    "duckdb>=1.4.1",
    "geocube>=0.7.1",
    "geopandas>=1.1.1",
    "hvplot>=0.12.1",
    "ipykernel>=6.30.1",
    "jupyter-bokeh>=4.0.5",
    "matplotlib>=3.10.6",
    "odc-stac>=0.4.0",
    "owslib>=0.34.1",
    "panel>=1.7.5",
    "pip>=25.2",
    "planetary-computer>=1.0.0",
    "pre-commit>=4.3.0",
    "pyarrow>=21.0.0",
    "pysheds>=0.5",
    "pystac-client>=0.9.0",
    "rasterstats>=0.20.0",
    "rioxarray>=0.19.0",
    "s2sphere>=0.2.5",
    "shapely>=2.1.1",
    "statsmodels>=0.14.5",
    "xdem>=0.1.6",
]
