[project]
name = "datos-escala-humana"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.1.0",
    "boto3>=1.40.49",
    "botocore>=1.40.49",
    "bottleneck>=1.6.0",
    "cdsapi>=0.7.7",
    "contextily>=1.6.2",
    "dask>=2025.10.0",
    "datashader>=0.18.2",
    "duckdb>=1.4.1",
    "earthaccess>=0.15.1",
    "flake8>=7.3.0",
    "folium>=0.20.0",
    "geedim>=2.0.0",
    "geemap>=0.36.6",
    "geocube>=0.7.1",
    "geohexgrid>=3.0.0",
    "geopandas>=1.1.1",
    "geoviews>=1.14.1",
    "hvplot>=0.12.1",
    "ipykernel>=7.1.0",
    "isort>=7.0.0",
    "itables>=2.5.2",
    "jenkspy>=0.4.1",
    "jupyter-bokeh>=4.0.5",
    "jupyter-cache>=1.0.1",
    "kaleido>=1.1.0",
    "leafmap>=0.55.0",
    "lintquarto>=0.7.0",
    "localtileserver>=0.10.6",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.7",
    "matplotlib-map-utils>=3.1.1",
    "matplotlib-scalebar>=0.9.0",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "nbqa>=1.9.1",
    "netcdf4>=1.7.3",
    "numbagg>=0.9.3",
    "odc-stac>=0.4.0",
    "openpyxl>=3.1.5",
    "osmnx>=2.0.6",
    "owslib>=0.34.1",
    "pandas>=2.3.3",
    "panel>=1.8.2",
    "pip>=25.3",
    "planetary-computer>=1.0.0",
    "pyarrow==17.0.0",
    "pysheds>=0.5",
    "pystac-client>=0.9.0",
    "python-dotenv>=1.2.1",
    "rasterstats>=0.20.0",
    "rioxarray>=0.20.0",
    "ruff>=0.14.2",
    "s2sphere>=0.2.5",
    "s3fs>=2025.9.0",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "tobler>=0.12.1",
    "vulture>=2.14",
    "xarray>=2025.4.0",
    "xdem>=0.1.6",
    "xee>=0.0.22",
]

[tool.ruff]
exclude = [
    ".jupyter_cache",
    "__pycache__",
    ".git",
    ".venv",
]

[tool.ruff.lint]
ignore = [
    "E402",  # module level import not at top (normal in notebooks)
    "F401",  # imported but unused (often intentional in notebooks)
]
